manifests/photoprism/statefullset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: photoprism
  namespace: photoprism
spec:
  selector:
    matchLabels:
      app: photoprism
  serviceName: photoprism
  replicas: 1
  template:
    metadata:
      labels:
        app: photoprism
    spec:
      containers:
        - name: photoprism
          image: photoprism/photoprism:230923-ce
          ports:
            - containerPort: 2342
              name: http
          volumeMounts:
            - mountPath: /photoprism/originals
              name: originals
            - mountPath: /photoprism/import
              name: import
            - mountPath: /photoprism/storage
              name: storage
          readinessProbe:
            httpGet:
              path: /api/v1/status
              port: http
      volumes:
        - name: originals
          persistentVolumeClaim:
            claimName: photoprism-pvc-originals
        - name: import
          persistentVolumeClaim:
            claimName: photoprism-pvc-import
        - name: storage
          persistentVolumeClaim:
            claimName: photoprism-pvc-storage
