manifests/photoprism/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingressClassName: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "512M"
    external-dns.alpha.kubernetes.io/target: 55c7affb-4f19-426b-aa56-cfa47940ee99.cfargotunnel.com
  name: photoprism
  namespace: photoprism
spec:
  rules:
    - host: fotos.kindersaai.nl
      http:
        paths:
          - backend:
              service:
                name: photoprism
                port:
                  name: http
            path: /
            pathType: Prefix
